# asgi-idempotency-header

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
idempotence/: handlers.py  middleware.py
idempotence/handlers/: base.py  memory.py
idempotency_header/: __init__.py  middleware.py
idempotency_header/backends/: __init__.py  aioredis.py  base.py  memory.py
idempotency_header/handlers/: aioredis.py  base.py  memory.py
idempotency_header_middleware/: __init__.py  middleware.py
idempotency_header_middleware/backends/: __init__.py  aioredis.py  base.py  memory.py  redis.py
tests/: conftest.py  test_backends.py  test_handlers.py  test_idempotence.py  test_idempotent_methods.py  test_middleware.py  test_uuid_formatting.py
