[tool.poetry]
name = 'asgi-idempotency-header'
version = '0.1.1'
description = 'Enable idempotent operations in POST and PATCH endpoints.'
authors = ['Sondre Lillebø Gundersen <sondrelg@live.no>']
license = 'BSD-3'
readme = 'README.md'
homepage = 'https://github.com/sondrelg/asgi-idempotency-header'
repository = 'https://github.com/sondrelg/asgi-idempotency-header'
keywords = [
    'idempotence',
    'idempotency',
    'header',
    'fastapi',
    'starlette',
    'asgi',
    'middleware',
    'api',
    'endpoint',
    'http'
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Framework :: AsyncIO',
    'Operating System :: OS Independent',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Typing :: Typed',
]
packages = [
    { include = 'idempotency_header_middleware' },
]

[tool.poetry.dependencies]
python = '^3.8'
fastapi = { version = '*', optional = true }
starlette = { version = '*', optional = true }
aioredis = { version = '^2', optional = true }
lupa = { version = '*', optional = true }  # needed for aioredis locks

[tool.poetry.dev-dependencies]
pytest = '*'
coverage = '*'
pre-commit = '*'
httpx = '*'
pytest-cov = '*'
pytest-asyncio = '*'
orjson = '*'
ujson = '*'
fakeredis = '*'

[tool.poetry.extras]
fastapi = ['fastapi']
starlette = ['starlette']
aioredis = ['aioredis', 'lupa']
all = ['aioredis', 'lupa', 'fastapi', 'starlette']

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.black]
quiet = true
line-length = 120
skip-string-normalization = true
experimental-string-processing = true

[tool.isort]
profile = 'black'
line_length = 120

[tool.coverage.run]
omit = [
    'idempotency_header_middleware/backends/base.py'
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
